<resources>
    <string name="app_name">Hello_Android_Activity</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_click_me">Click Me|</string>
    <string name="btn_forgot_password"><i><u>Forgot Password</u></i></string>
    <string name="btn_new_seller_register"><i><u>New Seller? Register</u></i></string>
    <string name="lbl_register">Register</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="check_register">I am at my home</string>
    <string name="btn_register_to_login"><i><u>To Login</u></i></string>
</resources>

