<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.padcmyanmar.hello_android_activity.RegisterActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/lbl_register" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/rl_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <TextView
            android:id="@+id/tv_register_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register_to_login"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:textColor="@color/colorPrimary"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_et_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_register_to_login"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:textColorHint="@color/colorPrimary">
            <EditText
                android:id="@+id/et_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:textColorHint="@color/colorPrimary"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_et_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:layout_below="@id/input_et_register_name"
            android:textColorHint="@color/colorPrimary">
            <EditText
                android:id="@+id/et_register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone"
                android:inputType="phone"
                android:textColorHint="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>

         <android.support.design.widget.TextInputLayout
             android:id="@+id/input_et_register_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="6dp"
             android:layout_below="@id/input_et_register_phone"
             android:textColorHint="@color/colorPrimary">
             <EditText
                 android:id="@+id/et_register_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
                 android:textColorHint="@color/colorPrimary"/>
         </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:layout_below="@id/input_et_register_email"
            android:textColorHint="@color/colorPrimary">
        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:drawableRight="@drawable/ic_visibility_black_24dp"
            android:inputType="textPassword"
            />
        </android.support.design.widget.TextInputLayout>

       <android.support.design.widget.TextInputLayout
           android:id="@+id/input_confirm_password_register"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginTop="6dp"
           android:layout_below="@id/input_password_register"
           android:textColorHint="@color/colorPrimary">
        <EditText
            android:id="@+id/et_register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Confirm Password"
            android:drawableRight="@drawable/ic_visibility_black_24dp"
            android:inputType="textPassword"
            />
       </android.support.design.widget.TextInputLayout>

         <TextView
             android:id="@+id/tv-gender"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Gender"
             android:layout_below="@id/input_confirm_password_register"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp"/>
         <RadioGroup
             android:id="@+id/radio_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_below="@id/tv-gender"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             >
            <RadioButton
                android:id="@+id/radio_btn_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_male"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                />

            <RadioButton
                android:id="@+id/radio_btn_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_female"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                />
         </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_et_register_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:layout_below="@id/radio_group"
            android:textColorHint="@color/colorPrimary">
            <EditText
                android:id="@+id/et_register_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Address"
                android:textColorHint="@color/colorPrimary"
                />
        </android.support.design.widget.TextInputLayout>


        <CheckBox
            android:id="@+id/chk_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_register"
            android:layout_below="@id/input_et_register_address"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_register"
            android:textAllCaps="false"
            android:layout_below="@id/chk_register"
            android:layout_alignRight="@id/input_confirm_password_register"
            android:layout_marginTop="6dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/White_full"/>

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
